--- a/Factory Tests/CMakeLists.txt
+++ b/Factory Tests/CMakeLists.txt
@@ -5,5 +5,5 @@ find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
  
 # Link runTests with what we want to test and the GTest and pthread library
-add_executable(runTests Testing.cpp Testing.h)
+add_executable(runTests main.cpp Army.cpp Army.h Navy.cpp Navy.h AirForce.cpp AirForce.h Military.h ArmyFactory.cpp ArmyFactory.h NavyFactory.cpp NavyFactory.h AirForceFactory.cpp AirForceFactory.h MilitaryFactory.h)
 target_link_libraries(runTests ${GTEST_LIBRARIES} pthread)
